# PokemonMini-Deauth

./: CONFIGURAR_GITHUB_PAGES.md  GITHUB_ACTIONS_SETUP.md  GUIA_GITHUB.md  Makefile  OPTIMIZACION_CACHE.md  README.md  RESUMEN_FINAL.md  VENTAJAS_SIN_DOCKER.md  build.sh
.github/workflows/: build.yml
docs/: conexion-rp2040-zero-xiao-esp32s3.md  serial-bridge.md
firmware/esp32_xiao/: WiFiScan.h  esp32_xiao.ino
firmware/rp2040_pm2040/: CMakeLists.txt  cart_write.pio  lale_64k.pio  main.c  uart_rx.pio  uart_tx.pio
src/: app_state.c  app_state.h  main.c  menu_ui.c  menu_ui.h  print.c  serial_protocol.c  serial_protocol.h  wifi_ap_model.c  wifi_ap_model.h
tools/: pm2040_patcher.py
web/: emulator.html  index.html  site.css  site.js
web/firmware/esp32/: manifest.json
